plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sprint.mission'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot 기본 웹 기능
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Data JPA 추가 (데이터베이스 연동)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Bean Validation (데이터 검증)
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // H2 데이터베이스 (테스트용, MySQL로 변경 가능)
    runtimeOnly 'com.h2database:h2'

    // Lombok (자동 getter/setter 생성)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // 테스트 라이브러리
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

}
tasks.named('test') {
    useJUnitPlatform()
}
